--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Binary Puzzle 6x6</title>
+    <title>V3Binary Puzzle 6x6</title>
     <script type='text/javascript'>  
         // sameple test arrays G1 is given in the question:
         var G1 = [1, null, 0, null, 0, 0, null, 1, null, 0, 0, null, null, null, null, null, null, 0, 0, null, null, 1, null, null, 1, 0, null, 1, 1, null, null, 0, null, null, 1, 1];
