gathering all 16 versions into one page and put a question paper below each versions

--- a/index-v03.html
+++ b/index-v03.html
@@ -71,9 +71,10 @@
     <!--  notes about modules  -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
-        <h2>No frills with the layout</h2>
-        <p>add text and objects as necessary</p>
-        
+        <h2>V3: Box borders cleaned with a couple of lines of CSS from Rain</h2>
+        <p>Return to <a href="index.html">home</a>:</p>
+        <p>&nbsp;</p>
+        <!--  set up the board as a table with a textbox in each cell  -->    
             <table class="gameboard">
                 <tr>
                     <td>
