--- a/index-v06.html
+++ b/index-v06.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Binary Puzzle 6x6</title>
+    <title>V06 Binary Puzzle 6x6</title>
     <script type='text/javascript'>  
         // sameple test arrays G1 is given in the question:
         var G1 = [1, null, 0, null, 0, 0, null, 1, null, 0, 0, null, null, null, null, null, null, 0, 0, null, null, 1, null, null, 1, 0, null, 1, 1, null, null, 0, null, null, 1, 1];
@@ -49,7 +49,7 @@
     <!--  2/9/19 the "initialNumbers()" function is re-named to "LoadGrid()"  -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
-        <h2>V5: Board cells re-named with a &quot;B&quot; for board, then column digit, then row digit&quot;. Load code modified, but still 6 repetitions.</h2>
+        <h2>V6: Board cells re-named with a &quot;B&quot; for board, then column digit, then row digit&quot;. Load code modified, but still 6 repetitions.</h2>
         <p>Return to <a href="index.html">home</a>:</p>
         <!--  9/10/19 Board cells re-named with a "B" for board, then column digit, then row digit"  -->
         <table class="gameboard">
