--- a/index-v09.html
+++ b/index-v09.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Binary Puzzle 6x6</title>
+    <title>V09 Binary Puzzle 6x6</title>
      <style type="text/css">
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
