--- a/index-v10.html
+++ b/index-v10.html
@@ -212,6 +212,8 @@
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
         <h2>V10: Code for 2row pairs</h2>
+        <p>Return to <a href="index.html">home</a>:</p>
+        <p>&nbsp;</p>
 
         <select id="cboPuzNo" onchange="LoadGrid(eval(value))">
             <!--<select id="cboPuzNo">-->
