--- a/Index.html
+++ b/Index.html
@@ -1,167 +1,74 @@
 ﻿<!--  6 by 6 binary Puzzel Game  -->
 <!--  30/03/2020 Kim Ponluksanapimol -->
-<!DOCTYPE html>
+<DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>"Binary Puzzle 6x6"</title>
-    <script type='text/javascript'>  
-        //  24/7/19 - 6x6 table of text boxes with some initial test values
-        function initialNumbers() {                    // sets the initial problem
-            document.getElementById('A1').value = 1;   // Hard code
-            document.getElementById('A2').value = "";  // Hard code
-            document.getElementById('A3').value = 0;
-            document.getElementById('A4').value = "";
-            document.getElementById('A5').value = 0;
-            document.getElementById('A6').value = 0;
-            document.getElementById('B1').value = "";
-            document.getElementById('B2').value = 1;
-            document.getElementById('B3').value = "";
-            document.getElementById('B4').value = 0;
-            document.getElementById('B5').value = 0;
-            document.getElementById('B6').value = "";
-            document.getElementById('C1').value = "";
-            document.getElementById('C2').value = "";
-            document.getElementById('C3').value = "";
-            document.getElementById('C4').value = "";
-            document.getElementById('C5').value = "";
-            document.getElementById('C6').value = 0;
-            document.getElementById('D1').value = 0;
-            document.getElementById('D2').value = "";
-            document.getElementById('D3').value = "";
-            document.getElementById('D4').value = 1;
-            document.getElementById('D5').value = "";
-            document.getElementById('D6').value = "";
-            document.getElementById('E1').value = 1;
-            document.getElementById('E2').value = 0;
-            document.getElementById('E3').value = "";
-            document.getElementById('E4').value = 1;
-            document.getElementById('E5').value = 1;
-            document.getElementById('E6').value = "";
-            document.getElementById('F1').value = "";
-            document.getElementById('F2').value = 0;
-            document.getElementById('F3').value = "";
-            document.getElementById('F4').value = "";
-            document.getElementById('F5').value = 1;
-            document.getElementById('F6').value = 1;
+    <title>Binary Puzzle 6x6</title>
+    <script type='text/javascript'>
+        // 24/7/19 - this will probably just be a home page
+    </script>
+    <style type="text/css">
+        body purple {
+            color: #D559D8;
         }
-   </script>
-     <style type="text/css">
-         /* 30/7/19 Rain Holloway - to eliminate double line */
-         * {
-             padding: 0;
-             border-collapse: collapse;
-         }
 
-         /* 27/7/19 Nev - for formatting of the table cells */
-        .gameboard, td, th {
-            width: 40px;
-            height: 40px;
-            font-size: 30px;
-            color: #0B1AB8;
-            vertical-align: middle;
-            text-align: center;
-            border-collapse: collapse;
-            border-spacing: 0;
-            border: 1px solid #ED2428;
+        .TextPurple {
+            color: #920F96;
         }
     </style>
 </head>
-<body onload="initialNumbers()">
-    <!--  notes about modules  -->
-    <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
-        <h2>No frills with the layout</h2>
-        <p>add text and objects as necessary</p>
-        
-            <table class="gameboard">
-                <tr>
-                    <td>
-                        <input id="A1" class="gameboard"  /></td>
-                    <td>
-                        <input id="A2" class="gameboard"  /></td>
-                    <td>
-                        <input id="A3" class="gameboard"  /></td>
-                    <td>
-                        <input id="A4" class="gameboard"  /></td>
-                    <td>
-                        <input id="A5" class="gameboard"  /></td>
-                    <td>
-                        <input id="A6" class="gameboard"  /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <input id="B1" class="gameboard"  /></td>
-                    <td>
-                        <input id="B2" class="gameboard"  /></td>
-                    <td>
-                        <input id="B3" class="gameboard"  /></td>
-                    <td>
-                        <input id="B4" class="gameboard"  /></td>
-                    <td>
-                        <input id="B5" class="gameboard"  /></td>
-                    <td>
-                        <input id="B6" class="gameboard"  /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <input id="C1" class="gameboard"  /></td>
-                    <td>
-                        <input id="C2" class="gameboard"  /></td>
-                    <td>
-                        <input id="C3" class="gameboard"  /></td>
-                    <td>
-                        <input id="C4" class="gameboard"  /></td>
-                    <td>
-                        <input id="C5" class="gameboard"  /></td>
-                    <td>
-                        <input id="C6" class="gameboard"  /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <input id="D1" class="gameboard"  /></td>
-                    <td>
-                        <input id="D2" class="gameboard"  /></td>
-                    <td>
-                        <input id="D3" class="gameboard"  /></td>
-                    <td>
-                        <input id="D4" class="gameboard"  /></td>
-                    <td>
-                        <input id="D5" class="gameboard"  /></td>
-                    <td>
-                        <input id="D6" class="gameboard"  /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <input id="E1" class="gameboard"  /></td>
-                    <td>
-                        <input id="E2" class="gameboard"  /></td>
-                    <td>
-                        <input id="E3" class="gameboard"  /></td>
-                    <td>
-                        <input id="E4" class="gameboard"  /></td>
-                    <td>
-                        <input id="E5" class="gameboard"  /></td>
-                    <td>
-                        <input id="E6" class="gameboard"  /></td>
-                </tr>
-                <tr>
-                    <td>
-                        <input id="F1" class="gameboard"  /></td>
-                    <td>
-                        <input id="F2" class="gameboard"  /></td>
-                    <td>
-                        <input id="F3" class="gameboard"  /></td>
-                    <td>
-                        <input id="F4" class="gameboard"  /></td>
-                    <td>
-                        <input id="F5" class="gameboard"  /></td>
-                    <td>
-                        <input id="F6" class="gameboard"  /></td>
-                </tr>
-            </table>
-        
-        <br />
-    </form>
+<body>
+    <!-- HTML consists of links and a series of images of the question -->
+    <h1>6x6 Binary Puzzle Game</h1>
+    <h2>Home page</h2>
+    <p>Links to versions below:</p>
+    <p><a href="index-v01.html" target="_blank">V01 </a>- A blank shell ready for some unique, innovative code</p>
+    <p><a href="index-v02.html" target="_blank">V02 </a>- Hard code + CSS</p>
+    <p><a href="index-v03.html" target="_blank">V03 </a>- CSS modified by Rain to have single solid line borders</p>
+    <p><a href="index-v04.html" target="_blank">V04 </a>- 32 lines of &quot;Grunt load&quot; code replaced by loops of 6 columns. 3 test grids loaded - G1, G2 &amp; G3. </p>
+    <p><a href="index-v05.html" target="_blank">V05 </a>- Full re-name of all board text boxes as &quot;B23&quot;, which is Board, Column 2, Row 3. Loop code refined to 6 loops of 6 columns</p>
+    <p><a href="index-v06.html" target="_blank">V06 </a>- Load code refined to 2 nested loops and tested for different row and column numbers</p>
+    <p><a href="index-v07.html" target="_blank">V07 </a>- Creation of a 2D array called Grid[] for easy row and column reference&nbsp;</p>
+    <p><a href="index-v08.html" target="_blank">V08 </a>- A good place to start this question. 13 test grids and buttons for each sub, each with a stub message.&nbsp;</p>
+    <p><a href="index-v09.html" target="_blank">V09 </a>- Main &quot;Solve Repeat&quot; coded to do 2 loops.</p>
+    <p><a href="index-v10.html" target="_blank">V10 </a>- Code for 2row pairs</p>
+    <p><a href="index-v11.html" target="_blank">V11 </a>- Code SolvePuzzle</p>
+    <p><a href="index-v12.html" target="_blank">V12 </a>- Code SolveNumberPairs & SolveNumberTrios</p>
+    <p><a href="index-v13.html" target="_blank">V13 </a>- Code CompleteRowsCols</p>
+    <p><a href="index-v14.html" target="_blank">V14 </a>- Code the "Complete" button</p>
+    <p><a href="index-v15.html" target="_blank">V15 </a>- Code the "Solve Once" button</p>
+    <div class="TextPurple" id="TPurple">
+        <p>The question we are solving is below in images:</p>
+    </div>
+    <p>
+        <img src="images/22_QuestionSetup.png" width="604" height="884" alt="" />
+        <p>&nbsp;</p>
+        <img src="images/22a-2D_arrays.png" width="600" height="134" alt="" />
+    </p>
+    <p>&nbsp;</p>
+    <p>
+        <img src="images/22b-DataTypes.png" width="580" height="44" alt="" /></p>
+    <p>&nbsp;</p>
+    <p>
+        <img src="images/22c-StructureChart.png" width="598" height="552" alt="" /></p>
+    <p>
+        <img src="images/22d-MainAlgorithm.png" width="596" height="210" alt="" /></p>
+    <p>&nbsp;</p>
+    <p>
+        <img src="images/22e-reusableCode.png" width="578" height="76" alt="" /></p>
+    <span class="TextPurple">A desk check is included to assist with what this code is actually doing: </span>
+    <p>
+        <img src="images/22fi-SolveRowPairs-DeskCheck.png" width="978" height="813" alt="" /></p>
+    <p>&nbsp;</p>
+    <p>
+        <img src="images/22fii-Lines6and7.png" width="576" height="40" alt="" /></p>
+    <p>&nbsp;</p>
+    <p>
+        <img src="images/22Gi-writeAlgorithm.png" width="598" height="132" alt="" /></p>
+    <p>
+        <img src="images/22Gii-driverForTesting.png" width="582" height="36" alt="" /></p>
+    <p>&nbsp;</p>
+    <p class="TextPurple">End of Question</p>
 </body>
 </html>
