--- a/index-v04.html
+++ b/index-v04.html
@@ -4,7 +4,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Binary Puzzle 6x6</title>
+    <title>V04 Binary Puzzle 6x6</title>
     <script type='text/javascript'>  
         // sameple test arrays G1 is given in the question:
         var G1 = [1, null, 0, null, 0, 0, null, 1, null, 0, 0, null, null, null, null, null, null, 0, 0, null, null, 1, null, null, 1, 0, null, 1, 1, null, null, 0, null, null, 1, 1];
@@ -72,9 +72,9 @@
     <!--  2/9/19 the "initialNumbers()" function is re-named to "LoadGrid()"  -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
-        <h2>No frills with the layout</h2>
-        <p>add text and objects as necessary</p>
-        
+        <h2 style="padding: 0px; border-collapse: collapse; color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">V4: Grunt load code changed to some loop code, with a name change from &quot;initialNumbers()&quot; to &quot;LoadGrid()&quot;. Row F of grunt code remains to compare."</h2>        
+        <p>Return to <a href="index.html">home</a>:</p>
+        <!--  set up the board as a table with a textbox in each cell  -->        
             <table class="gameboard">
                 <tr>
                     <td>
