--- a/index-v15.html
+++ b/index-v15.html
@@ -210,8 +210,8 @@
     <!--3/8/19 "LoadGrid()" now changed to 2 nested loops -->
     <form id="input">
         <h1>6x6 Binary Puzzle Game</h1>
-        <h2>V15</h2>
-
+        <h2>V15: Code the "Solve Once" button</h2>
+        <p>Return to <a href="index.html">home</a>:</p>
         <select id="cboPuzNo" onchange="LoadGrid(eval(value))">
             <!--<select id="cboPuzNo">-->
             <option value="GT">Test 1-36</option>
