--- a/Index.html
+++ b/Index.html
@@ -38,6 +38,7 @@
     <p><a href="index-v13.html" target="_blank">V13 </a>- Code CompleteRowsCols</p>
     <p><a href="index-v14.html" target="_blank">V14 </a>- Code the "Complete" button</p>
     <p><a href="index-v15.html" target="_blank">V15 </a>- Code the "Solve Once" button</p>
+    <p><a href="index-v16.html" target="_blank">V16 </a>- Finish the "Solve Repeat" button</p>
     <div class="TextPurple" id="TPurple">
         <p>The question we are solving is below in images:</p>
     </div>
