changed back ground colors and title colors

--- a/Index.html
+++ b/Index.html
@@ -3,12 +3,15 @@
 <DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8">  
     <title>Binary Puzzle 6x6</title>
     <script type='text/javascript'>
         // 24/7/19 - this will probably just be a home page
     </script>
     <style type="text/css">
+        body {
+            background-color: lightyellow; 
+        }       
         body purple {
             color: #D559D8;
         }
@@ -20,10 +23,10 @@
 </head>
 <body>
     <!-- HTML consists of links and a series of images of the question -->
-    <h1>6x6 Binary Puzzle Game</h1>
+    <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
     <h2>Home page</h2>
-    <p>Links to versions below:</p>
-    <p><a href="index-v01.html" target="_blank">V01 </a>- A blank shell ready for some unique, innovative code</p>
+    <p>Links to versions below:</p>   
+    <h3 style="color:palevioletred;"</h3><p><a href="index-v01.html" target="_blank">V01 </a>- A blank shell ready for some unique, innovative code</p>
     <p><a href="index-v02.html" target="_blank">V02 </a>- Hard code + CSS</p>
     <p><a href="index-v03.html" target="_blank">V03 </a>- CSS modified by Rain to have single solid line borders</p>
     <p><a href="index-v04.html" target="_blank">V04 </a>- 32 lines of &quot;Grunt load&quot; code replaced by loops of 6 columns. 3 test grids loaded - G1, G2 &amp; G3. </p>
