--- a/index-v04.html
+++ b/index-v04.html
@@ -47,6 +47,9 @@
     
     
     <style type="text/css">
+        body {
+            background-color: lightyellow;
+        }
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
              padding: 0;
@@ -71,7 +74,7 @@
 <body onload="LoadGrid(G3)">
     <!--  2/9/19 the "initialNumbers()" function is re-named to "LoadGrid()"  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2 style="padding: 0px; border-collapse: collapse; color: rgb(0, 0, 0); font-family: &quot;Times New Roman&quot;; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; text-decoration-style: initial; text-decoration-color: initial;">V4: Grunt load code changed to some loop code, with a name change from &quot;initialNumbers()&quot; to &quot;LoadGrid()&quot;. Row F of grunt code remains to compare."</h2>        
         <p>Return to <a href="index.html">home</a>:</p>
         <!--  set up the board as a table with a textbox in each cell  -->        
