--- a/index-v01.html
+++ b/index-v01.html
@@ -10,14 +10,16 @@
 
     </script>
     <style type="text/css">
-        /* no CSS here yet */
+        body {
+            background-color: lightyellow;
+        }
         
     </style>
 </head>
 <body onload="initialNumbers()">
     <!--  notes about modules  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V1: A blank page but at least the Visual Studio folder is set up with the solution file inside for a simple double click:</h2>
         <p>Return to <a href="index.html">home</a>::</p>
         <p>&nbsp;</p>
