--- a/index-v02.html
+++ b/index-v02.html
@@ -47,6 +47,9 @@
         }
     </script>
     <style type="text/css">
+        body {
+            background-color: lightyellow;
+        }
         .gameboard, td, th {
             width: 40px;
             height: 40px;
@@ -63,7 +66,7 @@
 <body onload="initialNumbers()">
     <!--  notes about modules  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V2: This version has the table of input boxes and loads defaults via a repetitive &quot;grunt&quot; method:</h2>
         <p>Return to <a href="index.html">home</a>::</p>
         <p>&nbsp;</p>
