--- a/index-v03.html
+++ b/index-v03.html
@@ -47,6 +47,9 @@
         }
    </script>
      <style type="text/css">
+         body {
+            background-color: lightyellow;
+        }
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
              padding: 0;
@@ -70,7 +73,7 @@
 <body onload="initialNumbers()">
     <!--  notes about modules  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V3: Box borders cleaned with a couple of lines of CSS from Rain</h2>
         <p>Return to <a href="index.html">home</a>:</p>
         <p>&nbsp;</p>
