--- a/index-v05.html
+++ b/index-v05.html
@@ -37,6 +37,9 @@
         }
    </script>   
    <style type="text/css">
+       body {
+            background-color: lightyellow;
+        }
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
              padding: 0;
@@ -61,7 +64,7 @@
 <body onload="LoadGrid(G3)">
     <!--  2/9/19 the "initialNumbers()" function is re-named to "LoadGrid()"  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V5: Board cells re-named with a &quot;B&quot; for board, then column digit, then row digit&quot;. Load code modified, but still 6 repetitions.</h2>
         <p>Return to <a href="index.html">home</a>:</p>
         <!--  9/10/19 Board cells re-named with a "B" for board, then column digit, then row digit"  -->
