--- a/index-v07.html
+++ b/index-v07.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>V07 Binary Puzzle 6x6</title>
      <style type="text/css">
+         body {
+            background-color: lightyellow;
+        }
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
              padding: 0;
@@ -60,7 +63,7 @@
 <body onload="LoadGrid(G4)">
     <!--  2/9/19 the "initialNumbers()" function is re-named to "LoadGrid()"  -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V7: Creation of a 2 deimensional array for easier row &amp; column reference.</h2>
         <p>Return to <a href="index.html">home</a>:</p>
         <!--  9/10/19 Board cells re-named with a "B" for board, then column digit, then row digit"  -->
