--- a/index-v08.html
+++ b/index-v08.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <title>V08 Binary Puzzle 6x6</title>
      <style type="text/css">
+         body {
+            background-color: lightyellow;
+        }
          /* 30/7/19 Rain Holloway - to eliminate double line */
          * {
              padding: 0;
@@ -88,7 +91,7 @@
      <!--Parameter for initial load can be changed manually-->
     <!--3/8/19 "LoadGrid()" now changed to 2 nested loops -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+        <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V8: Load 13 grids and add buttons for testing.</h2>
         <h3>This is a good place to start the exam question.</h3>
         <p>Return to <a href="index.html">home</a>:</p>
