--- a/index-v16.html
+++ b/index-v16.html
@@ -7,6 +7,9 @@
     <title>V16 binary Puzzle 6x6 </title>    
 	<link rel="icon" href="images/techEdIcon.png">
     <style type="text/css">
+        body {
+            background-color: lightyellow;
+        }
         /* CSS in the same file initially because it's minimal */
         /* 30/7/19 Rain Holloway - to eliminate double lines */
         * {
@@ -209,7 +212,7 @@
     <!--Parameter for initial load can be changed manually-->
     <!--3/8/19 "LoadGrid()" now changed to 2 nested loops -->
     <form id="input">
-        <h1>6x6 Binary Puzzle Game</h1>
+         <h1 style="color:orangered;">6x6 Binary Puzzle Game</h1>
         <h2>V16: Finish the "Solve Repeat" button</h2>
         <p>Return to <a href="index.html">home</a>:</p>
         <select id="cboPuzNo" onchange="LoadGrid(eval(value))">
