--- a/index-v16.html
+++ b/index-v16.html
@@ -8,7 +8,7 @@
 	<link rel="icon" href="images/techEdIcon.png">
     <style type="text/css">
         body {
-            background-color: lightyellow;
+            background-image: url("kim.png");
         }
         /* CSS in the same file initially because it's minimal */
         /* 30/7/19 Rain Holloway - to eliminate double lines */
